# personal-ai-runtime

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  Makefile.ps1  PROJECT_REVIEW.md  PROJECT_REVIEW_AUTO.md  PROJECT_REVIEW_DS_PRO.md  README.en.md  README.md  RUNTIME_CONSTITUTION_BACKLOG.md  RUNTIME_SPEC.md  TEST_ACCEPTANCE.md  backend_test.md  docker-compose.yml  frontend_test.md  install-hooks.cmd  install.bat  install.sh
backend/: Dockerfile  alembic.ini  capability_policy.json  interpretive_frames.yaml  mcp_config.json  mcp_config.local.json.example  mcp_registry.json  pyproject.toml  requirements-dev.txt  requirements.txt  trajectory_registry.yaml
backend/alembic/: env.py
backend/alembic/versions/: 0001_consolidated.py  001_initial_schema.py  002_drop_trajectory_links.py  003_add_app_settings.py  004_inbox_email_status.py  a09635d81cdf_add_dedup_key_to_notifications.py  b1c2d3e4f5a6_add_purpose_to_llm_calls.py  c3d4e5f6a7b8_add_plan_resumes.py  d4e5f6a7b8c9_drop_background_tasks.py  initial_schema.py  v02_projection_tables.py  v03_notification_dedup.py  v04_memory_index_repairs.py  v05_work_items_goal_columns.py  v06_drop_goals.py  v07_memory_document_provenance.py
backend/app/: activity_log.py  config.py  context_runtime.py  main.py  version.py
backend/app/api/: approvals.py  background_tasks.py  chat.py  connectors.py  dashboard.py  events.py  goals.py  inbox.py  knowledge.py  memory.py  models.py  notifications.py  reviews.py  settings_api.py  system.py  tasks.py  telemetry_api.py  timeline.py  trajectories.py  triggers.py  work_items.py  workflows.py
backend/app/assembler/: context_assembler.py
backend/app/chat/: prompt_artifact.py  prompt_compiler.py
backend/app/core/: brain.py  context_engine.py  conversation.py  event_recorder.py  llm_router.py  logging_config.py  mcp_hub.py  memory_engine.py  rate_limit.py  request_context.py  review_engine.py  scheduler.py  startup_health.py
backend/app/experimental/: README.md  __init__.py  agency_gate.py  agent_gateway.py  claim_authority.py  self_improver.py
backend/app/fragments/: register.py
backend/app/mcp_servers/: fetch.py  filesystem.py  web_search.py
backend/app/product/: daily_review.py  digital_legacy.py  encrypted_sync.py  friction_log.py  inbox.py  knowledge.py  monthly_review.py  morning_brief.py  notifications.py  personal_dashboard.py  validation_metrics.py  weekly_review.py
backend/app/store/: alembic_runner.py  bound_proxy.py  database.py  memory_queries.py  schema_ddl.py  schema_init.py  table_registry.py  telemetry_queries.py  text_chunker.py  vector.py
backend/mcp_servers/: __init__.py
backend/mcp_servers/runtime_gateway/: __init__.py  http_client.py  server.py  tools.py
backend/prompts/: coding_rules.md  coding_rules_ops.md  identity.md
backend/scripts/: __init__.py  _bootstrap.py  analyze_capability_orphans.py  backfill_goals_to_work_items.py  check_boundary.py  check_capability_policy_consistency.py  check_concept_growth.py  check_dependency_sync.py  check_doc_line_refs.py  check_doc_links.py  check_doc_table_sync.py  check_dynamic_imports.py  check_event_schema.py  check_execution_ownership.py  check_layer_deps.py  check_non_sovereign_attachments.py  check_projection_provenance.py  check_single_process_control_plane.py  check_version_sync.py  compact_policy_events.py  demo_data_sovereignty.py  fake_llm_server.py  friction.py  health_dashboard.py  seed_demo.py  verify_agency_surfaces.py  verify_alembic.py  verify_api_mcp_smoke.py  verify_belief_pipeline.py  verify_belief_quality.py  verify_belief_survival.py  verify_connector.py  verify_conversation_rebuild.py  verify_egress.py  verify_export_roundtrip.py  verify_goal_rebuild.py  verify_inbox_audit.py  verify_meaning_dag.py  verify_memory_index_repairs.py  verify_memory_lifecycle.py  (+8 more)
backend/scripts/baselines/: event_schema_versions.json
backend/tests/: conftest.py  test_background_fragment.py  test_context_assembler.py  test_context_policy.py  test_context_runtime_stage3.py  test_conversation_state_fragment.py  test_core_tier_fragments.py  test_dependency_sync.py  test_fragment_cleanup_phase5.py  test_fragment_read_boundary.py  test_fragment_registry_audit.py  test_goals_fragment.py  test_knowledge_fragment.py  test_mail_fragment_collect.py  test_mail_fragments.py  test_pipeline_integration.py  test_policy_coverage.py  test_prompt_artifact.py  test_timeline_fragment.py  test_version.py
(+714 files in other folders)
