[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-v", "--tb=short"]

[project]
name = "personal-ai-runtime-backend"
requires-python = ">=3.12"
# Canonical pinned set: requirements.txt (used by make install / CI).
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.49.0",
    "openai==1.58.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.14.2",
    "python-dotenv==1.2.2",
    "chromadb==0.5.23",
    "apscheduler==3.11.0",
    "httpx==0.28.1",
    "mcp>=1.0.0",
    "alembic==1.18.5",
    "sqlalchemy==2.0.36",
    "tiktoken==0.9.0",
    "structlog==25.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
follow_imports = "normal"

[tool.coverage.run]
source = ["app/api", "app/product"]
# NOTE: Several runtime modules are omitted from coverage enforcement.
# These are either (a) lifecycle/initialization code that is exercised by
# integration tests rather than unit tests, or (b) under active refactoring.
# Track removal of these omits as a follow-up — see ROADMAP Phase 3.7.
#
# app/api/workflows.py is deregistered from main.py since v0.2.0 (route
# 注销, API 保留) — it is dead code until re-enabled, so excluded from the
# gate to avoid penalising the real API surface.
omit = [
    "app/experimental/*",
    "app/core/runtime/memory_decay.py",
    "app/core/runtime/runtime_container.py",
    "app/core/runtime/runtime_loop.py",
    "app/core/runtime/capability_governance.py",
    "app/core/runtime/capability_policy.py",
    "app/api/workflows.py",
]
