[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-v", "--tb=short"]

[project]
name = "personal-ai-runtime-backend"
requires-python = ">=3.12"
# Canonical pinned set: requirements.txt (used by make install / CI).
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.51.0",
    "uvloop==0.22.1 ; sys_platform != 'win32' and implementation_name == 'cpython'",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "openai==2.44.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "python-dotenv==1.2.2",
    "chromadb==1.5.9",
    "httpx==0.28.1",
    "mcp==1.12.4",
    "alembic==1.18.5",
    "sqlalchemy==2.0.51",
    "tiktoken==0.13.0",
    "structlog==26.1.0",
    "cryptography==49.0.0",
    "pypdf==6.14.2",
    "python-docx==1.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
follow_imports = "normal"

[tool.coverage.run]
source = ["app/api", "app/product"]
# NOTE: Several runtime modules are omitted from coverage enforcement.
# These are lifecycle/initialization code exercised via integration tests
# or modules whose uncovered paths require heavy mocking (subprocess, network).
omit = [
    "app/core/runtime/runtime_loop.py",
    "app/core/runtime/capability_governance.py",
]
